k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-telemetry-query-service
  labels:
    app: axion-telemetry-query-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: axion-telemetry-query-service
